# phone-automation

./: .dockerignore  .env.example  .gitignore  .replit  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  replit.nix  requirements.txt  run.sh  start.bat  start.sh
app/: cli.py  config_manager.py  database.py  main.py  paths.py  ui.py
app/api/: calls.py  export.py  properties.py
app/config/: settings.py
app/models/: schemas.py
app/services/: demo_data.py  email_parser.py  email_sender.py  line_notify.py  property.py  retell.py  template_manager.py  voice_provider.py
docs/: DELIVERY_GUIDE.md  DEPLOY.md  OPERATION_MANUAL.md  PHONE_SETUP.md  REQUIREMENTS_SPEC.md  architecture.md  interruption-handling-solutions.md
docs/design/: architecture-tiers.md  interruption-handling.md  risk-analysis.md  solution-tiers.md
docs/samples/: call_samples.md  email_samples.md  result_csv_sample.md
scripts/: start.bat  start.sh
tests/: conftest.py  test_api_calls.py  test_config_tier.py  test_conversation_scenarios.py  test_template_interruption.py  test_voice_provider.py
